<resources>
    <string name="app_name">MiNevera</string>

    <string name="text_au">About Us</string>
    <string name="text_map">MAPA</string>

    <string name="action_settings">Settings</string>

    # main activity
    <string name="b_lista_desc">Añadir a la lista de la compra</string>
    <string name="b_mas_desc">Añadir productos a la nevera</string>
    <string name="b_mapa_desc">Abrir el mapa </string>
    <string name="mensaje_mainact">En tu nevera actualmente hay ...</string>
    <string-array name="options">
        <item>Options:</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    # add activity
    <string name="no_content">Aún no has añadido nada</string>
    <string name="menu_insert">Añadir producto</string>
    <string name="menu_delete">Borrar producto</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="null_name">You need to introduce the name of the product.</string>
    <string name="null_days">Please, introduce a valid value.</string>
    <string name="max_days">The maximum number of days is 25.</string>

    #add menu
    <string name="b_bbdd_desc">Add products manually</string>
    <string name="b_camara_desc">Scan product</string>

    #search ingredient
    <string name="title_dialog">Error</string>
    <string name="message_dialog">Please enter an ingredient</string>
    <string name="button_ok_search">Search</string>
    <string name="toast_name">Ingredient OK</string>
    <string name="message_search">Search a recipe by ingredient</string>
    <string name="edit_message">Enter an ingredient</string>

    #camara menu
    <string name="fecha_cad_desc">Select the expiration date of the product </string>
    <string name="fecha_cad">00-00-0000</string>
    <string name="boton_scan">SCAN</string>
    <string name="name_scan"> Click "SCAN" to add a new product</string>
    <string name="wrong_date"> The expiration date should be after the current date.  Please introduce the product again </string>
    <string name="null_name_camara"> The product has not been found in the database. Please introduce the product again </string>

</resources>
